--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -954,6 +954,7 @@
 		font-weight: 500;
 		font-size: 20px;
 		line-height: 30px;
+		background-color: $white;
 
 		&::before {
 			position: absolute;
